# bleachpdf

./: .gitignore  README.md  assembler.py  bleachpdf.py  pii.example.yaml  plan.md  pyproject.toml  redactor.py
docs/: testing.md
src/bleachpdf/: __init__.py
tests/: conftest.py  test_redaction.py
