[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bleachpdf"
version = "0.1.0"
description = "PII redaction tool for PDF documents using OCR and PEG pattern matching"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "John W. Byrd" },
]
keywords = ["pdf", "redaction", "pii", "ocr", "privacy", "tesseract"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "reportlab>=4.0.0",
    "PyMuPDF>=1.24.0",
    "PyYAML>=6.0",
    "parsimonious>=0.10.0",
    "platformdirs>=4.0.0",
    "psutil>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/johnwbyrd/bleachpdf"
Repository = "https://github.com/johnwbyrd/bleachpdf"
Issues = "https://github.com/johnwbyrd/bleachpdf/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "huggingface_hub>=0.20.0",
]

[project.scripts]
bleachpdf = "bleachpdf:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bleachpdf"]

[tool.pytest.ini_options]
addopts = "-n auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
